--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ronier Lima</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&amp;display=swap" rel="stylesheet">
+    <title>Alberto Wowtilla</title>
 </head>
 <body>
-
-    <h1>Sou Ronier. <br>Desenvolvedor Fullstack.</h1>
+    <main>
+        <section>
+            <!-- texto -->
+            <p>Olá!</p>
+            <h1>Sou Alberto. <br>Desenvolvedor Fullstack.</h1>
+            <p>Atuo na área de desenvolvimento de software e ensino profissionalizante de programação. Sou Bacharel em Sistemas de Informação.</p>
     
+            <!-- social media -->
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+
+            <!-- botões -->
+            <p>
+            <button class="btn success">Enviar Email</button>
+            <button class="btn info">Baixar Currículo</button>
+        </section>
+
+        <section>
+            <img id="perfil" src="images/perfil.jpg" alt="">
+        </section>
+    </main>
 </body>
 </html>
